[package]
name = "pio-uart-9bit"
version = "0.0.1"
edition = "2024"
description = "Pio-Uart with support for 9 bit serial data"
license = "BSD-3-Clause"
repository = "https://github.com/davidmpye/pio-uart-9bit"
documentation = "https://docs.rs/pio-uart"
readme = "README.md"
keywords = ["uart", "pio", "rp2040", "embedded"]
categories = ["embedded", "no-std"]
authors = ["Karsten Große", "David Pye"]

[dependencies]
cortex-m = "0.7.7"
defmt = "0.3.8"
embedded-io = "0.6.1"
fugit = "0.3.7"
pio = "0.2.1"
pio-proc = "0.2.2"
rp2040-hal = "0.10.2"

[dev-dependencies]
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
rp-pico = "0.9.0"
